--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,14 +5,34 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "paths": {
+      "@/*": ["./*"]
+    },
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "incremental": true,
+    "types": ["jest", "@testing-library/jest-dom"]
   },
   "include": [
     "next-env.d.ts",
     "next.config.mjs",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "./src/**/**.*",
+    "tests",
+    ".eslintrc.js",
+    "postcss.config.js",
+    "tailwind.config.js",
+    "./jest.config.js",
+    "./jest.setup.js"
   ],
   "exclude": ["node_modules"]
 }
