--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@repo/ui": "workspace:*",
     "next": "14.2.6",
     "react": "18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
