feat: add API health check for bridge and gem services

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@repo/ui": "workspace:*",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
+    "ethers": "^5.7.2",
     "next": "14.2.6",
     "react": "18.3.1",
     "react-chartjs-2": "^5.2.0",
